--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -29,6 +29,18 @@ memory_limit = 512M
 
 ;============================================================================================
 
+;=== xDebug =================================================================================
+
+[xdebug]
+xdebug.remote_enable=on
+xdebug.remote_autostart=on
+xdebug.remote_connect_back=on
+#xdebug.remote_handler=dbgp
+xdebug.remote_host=localhost
+xdebug.remote_port=9000
+
+;============================================================================================
+
 [Date]
 ; Defines the default timezone used by the date functions
 date.timezone = "Europe/Kiev"
