Bugfix: removed deprecated comment from php ini

--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -35,7 +35,7 @@ memory_limit = 512M
 xdebug.remote_enable=on
 xdebug.remote_autostart=on
 xdebug.remote_connect_back=on
-#xdebug.remote_handler=dbgp
+xdebug.remote_handler=dbgp
 xdebug.remote_host=localhost
 xdebug.remote_port=9000
 
