Added instalation scripts for propro and raphf extensions, used new logic to create name of ini files for extensions (example: 00N-EXTNAME.ini), updated http extension to 2.0.3

--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -38,6 +38,7 @@ xdebug.remote_connect_back=on
 xdebug.remote_handler=dbgp
 xdebug.remote_host=localhost
 xdebug.remote_port=9000
+xdebug.max_nesting_level=250
 
 ;============================================================================================
 
