Updated versions of extensions

--- a/etc/php/php-fpm.conf
+++ b/etc/php/php-fpm.conf
@@ -48,7 +48,8 @@ rlimit_core = 0
 ;prefix = listen
 user = www-data
 group = www-data
-listen = var/run/php5-fpm.sock
+; listen = var/run/php5-fpm.sock
+listen = 127.0.0.1:9000
 listen.backlog = 128
 listen.owner = www-data
 listen.group = www-data
