--- a/etc/php/php-fpm.conf
+++ b/etc/php/php-fpm.conf
@@ -26,7 +26,7 @@ syslog.facility = daemon
 syslog.ident = php-fpm
 
 ; Possible Values: alert, error, warning, notice, debug
-log_level = debug
+log_level = warning
 
 emergency_restart_threshold = 10
 emergency_restart_interval = 5m
