Added ability to enable opcache

--- a/etc/php/php-fpm.conf
+++ b/etc/php/php-fpm.conf
@@ -57,12 +57,12 @@ listen.mode = 0666
 listen.allowed_clients = 127.0.0.1
 ;priority = -19
 pm = dynamic
-pm.max_children = 5
-pm.start_servers = 2
-pm.min_spare_servers = 1
-pm.max_spare_servers = 3
+pm.max_children = 512
+pm.start_servers = 128
+pm.min_spare_servers = 64
+pm.max_spare_servers = 256
 ;pm.process_idle_timeout = 10s;
-;pm.max_requests = 500
+pm.max_requests = 25
 ;pm.status_path = /status
 ;ping.path = /ping
 ;ping.response = pong
