--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -25,22 +25,34 @@ upload_max_filesize = 18M
 ;=== Memory limits ==========================================================================
 
 ; This sets the maximum amount of memory in bytes that a script is allowed to allocate
-memory_limit = 512M
+memory_limit = 1024M
+
+;============================================================================================
+
+;=== OPcache ================================================================================
+
+opcache.memory_consumption=128
+opcache.interned_strings_buffer=8
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=60
+opcache.fast_shutdown=1
+opcache.enable_cli=1
 
 ;============================================================================================
 
 ;=== xDebug =================================================================================
 
-[xdebug]
-xdebug.remote_enable=on
-xdebug.remote_autostart=on
-xdebug.remote_connect_back=on
-xdebug.remote_handler=dbgp
-xdebug.remote_host=localhost
-xdebug.remote_port=9000
-xdebug.max_nesting_level=250
+;[xdebug]
+;xdebug.remote_enable=on
+;xdebug.remote_autostart=on
+;xdebug.remote_connect_back=on
+;xdebug.remote_handler=dbgp
+;xdebug.remote_host=localhost
+;xdebug.remote_port=9000
+;xdebug.max_nesting_level=250
 
 ;============================================================================================
+
 
 [Date]
 ; Defines the default timezone used by the date functions
